--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Etep.github.io by etep</title>
+    <title>Pete Stevenson</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -14,7 +14,9 @@
     <![endif]-->
   </head>
   <body>
+      <!--
     <div class="wrapper">
+        
       <header>
         <h1 class="header">Etep.github.io</h1>
         <p class="header">github page</p>
@@ -27,6 +29,8 @@
 
       </header>
       <section>
+          -->
+          <!--
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
@@ -56,14 +60,17 @@ $ git checkout gh-pages
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
+-->
+<!--              
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
+              -->
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    <!--
+		-->
   </body>
 </html>
